--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">CoolWeather</string>
+    <string name="add">添加</string>
+
+    <string name="sun_set">&#xe66d;</string>
+    <string name="sport">&#xe627;</string>
+    <string name="ultraviolet">&#xe911;</string>
+    <string name="wash_car">&#xe669;</string>
+    <string name="dressing">&#xe610;</string>
+    <string name="flu">&#xe613;</string>
+    <string name="sun_rise">&#xe68c;</string>
+    <string name="travel">&#xe616;</string>
+    <string name="comfort">&#xe679;</string>
+    <string name="air">&#xe697;</string>
 </resources>
