--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">CoolWeather</string>
     <string name="add">添加</string>
 
-    <string name="sun_set">&#xe66d;</string>
+    <string name="sun_set">&#xe67a;</string>
     <string name="sport">&#xe627;</string>
     <string name="ultraviolet">&#xe911;</string>
     <string name="wash_car">&#xe669;</string>
